fixed hover on dark mode

--- a/style.css
+++ b/style.css
@@ -70,6 +70,15 @@ ul li::before {
   color: #10a2f5;
 }
 
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #e9bc3f;
+}
+
 body.dark-mode {
   background: #24252d;
 }
@@ -80,12 +89,7 @@ body.dark-mode h1 {
   color: #cacacc;
 }
 
-a {
-  color: #000;
-  text-decoration: none;
-}
-
-a:hover {
+body.dark-mode a:hover {
   color: #e9bc3f;
 }
 
